fix: Alignment of empty of donations table

--- a/assets/scss/layout/_table.scss
+++ b/assets/scss/layout/_table.scss
@@ -141,6 +141,11 @@ td {
 
     &:last-child {
       padding: 0;
+
+      &:first-child {
+        padding-right: my.$gutter;
+        padding-left: my.$gutter;
+      }
     }
   }
 }
